@startuml

interface Estado{
    + jugar( :Gladiador, :Camino) : Estado
}

class Sano{
    + jugar( :Gladiador, :Camino) : Estado
}

class SinEnergia{
    + jugar( :Gladiador, :Camino) : Estado
}

class Lesionado{
    + jugar( :Gladiador, :Camino) : Estado
}


Estado <|-- SinEnergia
Estado <|-- Sano
Estado <|-- Lesionado

SinEnergia .> Sano
Sano <. Lesionado

@enduml